@@ -1,3 +1,7 @@
+2005-08-21  Timothy Brownawell  <tbrownaw@gmail.com>
+
+	Fix bad merge (user error).
+
 2005-08-20  Timothy Brownawell  <tbrownaw@gmail.com>
 
 	* pcdv.cc (change_value): Bugfix.
